[package]
name = "blogreader"
version = "1.0.0"
edition = "2024"
description = "rss/atom blogreader for terminals"
license = "MIT"
readme = "README.md"
repository = "https://github.com/weirdsmiley/blogreader"
keywords = ["rss", "atom", "blog", "tui"]
categories = ["command-line-utilities"]

[[bin]]
name = "br"
path = "src/main.rs"

[dependencies]
crossterm = "0.27.0"
ratatui = "0.26.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
open = "5.0.0"
feed-rs = "1.4.0"
sha2 = "0.10"
serde_json = "1.0"
scraper = "0.19.0"
url = "2.5.0"
dirs = "6.0.0"
chrono = "0.4.42"
